[package]
name = "wiggle"
version = "0.1.0"
authors = ["Pat Hickey <phickey@fastly.com>", "Jakub Konka <kubkonk@jakubkonka.com>"]
edition = "2018"

[dependencies]
wiggle-generate = { path = "crates/generate" }
wiggle-memory = { path = "crates/memory" }

[dev-dependencies]
proptest = "0.9"

[workspace]
members = [
  "crates/generate",
  "crates/memory"
]
exclude = ["crates/WASI"]
